test/typecheck/errors/bad-views6.boa
view sv4 {
	o: output sum of int;
}

v := sv4/o;

c := v._123f;
